--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
     vertical-align:text-top;
     border-radius: 1rem;
     text-align: center;
-    margin-left: 50vb;
+    margin-left: 23%;
   }
   
 input{
